# qdrant-edge-warehouse-robot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: ATTRIBUTION.md  README.md  catalog_garments_attribution.json
notebooks/: mixed_bin_demo.ipynb
scripts/: benchmark.py  demo.py  demo_crumpled.py  demo_real.py  make_synthetic_data.py
src/mixed_bin/: __init__.py  catalog.py  cli.py  config.py  detector.py  edge_shard.py  embeddings.py  index.py  search.py
tests/: conftest.py  test_embeddings.py  test_index.py  test_search.py
